--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -69,6 +69,7 @@
                 android:layout_height="wrap_content"
                 android:src="@drawable/postpic"
                 android:scaleType="center"
+                android:adjustViewBounds="true"
                 app:layout_constraintTop_toBottomOf="@id/ProfilePicOnTopPost"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
